--- a/LZHExtensionsDemo/LZHExtensionsDemo/Info.plist
+++ b/LZHExtensionsDemo/LZHExtensionsDemo/Info.plist
@@ -62,5 +62,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>需要您的同意, 才能访问您的位置来实现精确导航服务</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>需要您的同意, My Fengon才能访问您的位置来实现精确导航服务</string>
+    <key>NSLocationUsageDescription</key>
+    <string>需要您的同意, My Fengon才能访问您的位置来实现精确导航服务</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>需要您的同意, My Fengon才能访问您的位置来实现精确导航服务.建议您将权限设置为"始终允许"</string>
 </dict>
 </plist>
